[package]
name = "gsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.11", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.20.0"
bevy_cursor = "0.1.1"
rand = { version = "0.8.5", features = [] }
